--- a/book/_bookdown.yml
+++ b/book/_bookdown.yml
@@ -5,6 +5,9 @@ rmd_files:
   - "02-workflow.Rmd"
   - "03-install.Rmd"
   - "04-amplicon.Rmd"
+  - "05-phyloseq.Rmd"
+  - "06-EDA.Rmd"
+  - "07-classnet.Rmd"
 output_dir: "book"
 new_session: true
 language:
